# invest-earnings-dashboard

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dashboard.Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  event-engine.Dockerfile  market-scrapers.Dockerfile  market-scrappers.Dockerfile  migrations.Dockerfile  requirements.txt  wallet-api.Dockerfile
app/: __init__.py  alembic.ini
common/: README.md  pyproject.toml
common/invest_earning/database/: __init__.py  utils.py
common/invest_earning/database/analytic/: __init__.py  earning_yield.py
common/invest_earning/database/routines/: bootstrap_economic.py  db_backup.py  load_backup.py
common/invest_earning/database/wallet/: __init__.py  asset.py  asset_document.py  economic.py  entities.py  market_price.py  position.py
common/migrations/: Makefile  alembic.ini
common/migrations/revisions/: env.py
common/migrations/revisions/analytic/: 54bf997a1ebe_initial_database.py  6f219c0bf033_initial_database.py  70ba2da21ca1_add_total_earnings_to_earning_yield.py
common/migrations/revisions/wallet/: 46a9307fcdbf_add_market_price_table.py  62d263ca3271_create_initial_database.py  a64e6d3b778d_update_table_economic_data_with_.py  b756275b3369_add_cascade_to_earningsrights_table.py  c117af3cf49b_add_asset_document_table.py  f303d29a08c1_add_table_economic_data.py
common/scripts/: dump_backup.sh  load_backup.sh  run_migrations.sh
common/tools/: generate_migrations.sh
dashboard/: README.md  requirements.txt
data/: economic_data.parquet
docs/: architecture.md
event-engine/: README.md  (+1 more)
(+117 files in other folders)
