[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invest-earning-common"
version = "0.0.1"
description = "Common utilities for invest earnings."
readme = "README.md"

dependencies = ["alembic>=1.15.0", "pandas>=2.2.0", "click>=8.1.0", "sqlalchemy>=2.0.40", "pydantic-settings>=2.9.0"]

[tool.setuptools.packages.find]
include = ["invest_earning*"]
namespaces = true
